--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Metadata -->
   <meta charset="utf-8" />
   <meta name="description" content="Droid-Break offers a list of free high-quality alternatives to proprietary Android apps." />
-  <meta name="keywords" content="android,alternative,apps,free,foss,open source,prism-break" />
+  <meta name="keywords" content="android,alternative,apps,free,foss,open source,prism-break,f-droid,fdroid" />
   <meta name="robots" content="index, follow" />
   <link rel="icon" href="favicon.ico" />
   <link rel="shortcut icon" href="favicon.ico" />
@@ -85,7 +85,7 @@
     <p>
       <strong>Droid-Break</strong> is a list of <em>free and open source</em> Android apps inspired by <a href="https://prism-break.org" target="_blank">Prism-Break</a>.
       Our purpose is to show you <em>high quality alternatives</em> to the big proprietary solutions.<br />
-      Please note that open source apps don't guarantee absolute freedom, e.g., an open source Twitter client still sends everything to Twitters' servers.<br />
+      Please note that open source apps don't guarantee absolute freedom, e.g., an open source Twitter client still sends everything to Twitter's servers.<br />
       Anyway, we believe it's the best we can come up with and that in many cases it's the better choice.<br />
       If you think an app should be added please write an <a href="support.html">email</a>, a <a href="https://twitter.com/droidbreak" target="_blank">tweet</a>, a <a href="#disqus">Disqus</a> comment, or fork the project on <a href="https://github.com/droidbreak/droidbreak.github.io" target="_blank">GitHub</a> and make a pull request.<br />
     </p>
@@ -507,7 +507,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=org.telegram.messenger" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-              <a href="https://f-droid.org/repository/browse?fdid=org.telegram.messenger" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=org.telegram.messenger" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
               <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="telegram" />
 
             </div>
@@ -567,7 +567,7 @@
               <div class="media-Text">
                 <h2 class="eps">RedPhone</h2>
                 <p>
-                  RedPhone uses end-to-end encryption and their own network. Very easy to use. Requires to sign up. The iOS version is called <a href="https://itunes.apple.com/de/app/signal-private-messenger/id874139669?mt=8">Signal</a>.
+                  RedPhone uses end-to-end encryption and their own network. Very easy to use. Requires to sign up. The iOS version is called <a href="https://itunes.apple.com/app/signal-private-messenger/id874139669/">Signal</a>.
                 </p>
                 <ul>
                   <li>Price: Free</li>
@@ -667,6 +667,30 @@
           <!-- Multimedia:Free alternative -->
 
           <td>
+            <!-- VLC -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/vlc.png" alt="vlc" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">VLC</h2>
+                <p>
+                  VLC is a well known media player. It's also one of the few players that already play the new <a href="https://en.wikipedia.org/wiki/Opus_(audio_format)">opus</a> audio format.
+                </p>
+                <ul>
+                  <li>Price: Free</li>
+                  <li>Min. Android version: 2.1</li>
+                  <li><a href="http://wiki.videolan.org/Developers_Corner">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=org.videolan.vlc" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=org.videolan.vlc" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="vlc" />
+              </div>
+            </div>
+
             <!-- Vanilla Music -->
             <div class="media emph-Block">
               <div class="media-Object">
@@ -757,35 +781,10 @@
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=com.turtleplayerv2" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=com.turtleplayerv2" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="turtle" />
               </div>
             </div>
-
-
-            <!-- VLC -->
-            <div class="media emph-Block">
-              <div class="media-Object">
-                <a href="#!" class="pic-Rounded">
-                  <img src="img/foss/vlc.png" alt="vlc" class="floss" />
-                </a>
-              </div>
-              <div class="media-Text">
-                <h2 class="eps">VLC</h2>
-                <p>
-                  VLC is a well known media player. It's also one of the few players that already play the new <a href="https://en.wikipedia.org/wiki/Opus_(audio_format)">opus</a> audio format.
-                </p>
-                <ul>
-                  <li>Price: Free</li>
-                  <li>Min. Android version: 2.1</li>
-                  <li><a href="http://wiki.videolan.org/Developers_Corner">Source code</a></li>
-                </ul>
-                <hr>
-                <a href="https://play.google.com/store/apps/details?id=org.videolan.vlc" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-                <a href="https://f-droid.org/repository/browse/?fdid=org.videolan.vlc" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
-                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="vlcplayer" />
-              </div>
-            </div>
-
 
             <!-- AntennaPod -->
             <div class="media emph-Block">
@@ -836,7 +835,7 @@
           <!-- Email:Proprietary -->
           <td class="proprietary">
             <ul class="proprietary">
-              <li><img src="img/proprietary/gmail.png" alt="gmail" class="proprietary" /><br />GMail</li>
+              <li><img src="img/proprietary/gmail.png" alt="gmail" class="proprietary" /><br />Gmail</li>
               <li><img src="img/proprietary/aquamail.png" alt="aquamail" class="proprietary" /><br />Aqua Mail</li>
               <li><img src="img/proprietary/maildroid.png" alt="maildroid" class="proprietary" /><br />MailDroid</li>
             </ul>
@@ -1039,7 +1038,7 @@
                   ownCloud News Reader connects to your <a href="https://owncloud.org">ownCloud</a>-instance and downloads the RSS-feeds.
                 </p>
                 <ul>
-                  <li>Price: 1.96 &euro;(Google Play), free(F-Droid)</li>
+                  <li>Price: 1.96 &euro; (Google Play), Free (F-Droid)</li>
                   <li>Min. Android version: 2.1</li>
                   <li><a href="https://github.com/owncloud/News-Android-App">Source code</a></li>
                 </ul>
@@ -1076,6 +1075,30 @@
               </div>
             </div>     
 
+            <!-- TTRSS-Reader -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/ttrss-reader.png" alt="ttrss-reader" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">TTRSS-Reader</h2>
+                <p>
+                  An offline reader that works with the <a href="https://en.wikipedia.org/wiki/Tiny_Tiny_RSS">Tiny Tiny RSS</a> web-based feed reader/aggregator.
+                </p>
+                <ul>
+                  <li>Price: Free</li>
+                  <li>Min. Android version: 2.2</li>
+                  <li><a href="https://github.com/nilsbraden/ttrss-reader-fork/">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=org.ttrssreader" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=org.ttrssreader" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="ttrssreader" />
+              </div>
+            </div>
+
             <!-- RedReader -->
             <div class="media emph-Block">
               <div class="media-Object">
@@ -1100,30 +1123,6 @@
 
               </div>
             </div> 
-
-            <!-- TTRSS-Reader -->
-            <div class="media emph-Block">
-              <div class="media-Object">
-                <a href="#!" class="pic-Rounded">
-                  <img src="img/foss/ttrss-reader.png" alt="ttrss-reader" class="floss" />
-                </a>
-              </div>
-              <div class="media-Text">
-                <h2 class="eps">TTRSS-Reader</h2>
-                <p>
-                  An offline reader that works with the <a href="https://en.wikipedia.org/wiki/Tiny_Tiny_RSS">Tiny Tiny RSS</a> web-based feed reader/aggregator.
-                </p>
-                <ul>
-                  <li>Price: Free</li>
-                  <li>Min. Android version: 2.2</li>
-                  <li><a href="https://github.com/nilsbraden/ttrss-reader-fork/">Source code</a></li>
-                </ul>
-                <hr>
-                <a href="https://play.google.com/store/apps/details?id=org.ttrssreader" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-                <a href="https://f-droid.org/repository/browse/?fdid=org.ttrssreader" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
-                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="ttrssreader" />
-              </div>
-            </div>
 
 
           </td>
@@ -1181,30 +1180,6 @@
             </div>
           </div>
 
-            <!-- OI File Manager -->
-            <div class="media emph-Block">
-              <div class="media-Object">
-                <a href="#!" class="pic-Rounded">
-                  <img src="img/foss/oifilemanager.png" alt="oi file manager" class="floss" />
-                </a>
-              </div>
-              <div class="media-Text">
-                <h2 class="eps">OI File Manager</h2>
-                <p>
-                  OI File Manager is a file manager with everything you would expect and need.
-                </p>
-                <ul>
-                  <li>Price: Free</li>
-                  <li>Min. Android version: 1.6</li>
-                  <li><a href="https://github.com/openintents/filemanager">Source code</a></li>
-                </ul>
-                <hr>
-                <a href="https://play.google.com/store/apps/details?id=org.openintents.filemanager" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-                <a href="https://f-droid.org/repository/browse/?fdid=org.openintents.filemanager" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
-                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="oifilemanager" />
-              </div>
-            </div>
-
             <!-- Ghost Commander  -->
             <div class="media emph-Block">
               <div class="media-Object">
@@ -1226,6 +1201,30 @@
                 <a href="https://play.google.com/store/apps/details?id=com.ghostsq.commander" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
                 <a href="https://f-droid.org/repository/browse/?fdid=com.ghostsq.commander" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="ghostcommander" />
+              </div>
+            </div>
+
+            <!-- OI File Manager -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/oifilemanager.png" alt="oi file manager" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">OI File Manager</h2>
+                <p>
+                  OI File Manager is a file manager with everything you would expect and need.
+                </p>
+                <ul>
+                  <li>Price: Free</li>
+                  <li>Min. Android version: 1.6</li>
+                  <li><a href="https://github.com/openintents/filemanager">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=org.openintents.filemanager" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=org.openintents.filemanager" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="oifilemanager" />
               </div>
             </div>
 
@@ -1295,10 +1294,10 @@
               <div class="media-Text">
                 <h2 class="eps">Navit</h2>
                 <p>
-                  Navit provides routing calculation, offline use, 3D or bird-view mode and Points of Interest(POI). It uses OpenStreetMap data as well.
+                  Navit provides routing calculation, offline use, 3D or bird-view mode and Points of Interest (POI). It uses OpenStreetMap data as well.
                 </p>
                 <ul>
-                  <li>Price: free</li>
+                  <li>Price: Free</li>
                   <li>Min. Android version: 1.5</li>
                   <li><a href="http://sourceforge.net/p/navit/code/">Source code</a></li>
                 </ul>
@@ -1375,7 +1374,7 @@
               <div class="media-Text">
                 <h2 class="eps">AnySoftKeyboard</h2>
                 <p>
-                  AnySoftKeyboard offers <a href="https://play.google.com/store/apps/developer?id=Menny+Even+Danan">multiple languages with autocomplete support</a>, swipe gestures, multitouch and much more.
+                  AnySoftKeyboard offers <a href="https://play.google.com/store/apps/developer?id=Menny+Even+Danan">multiple languages</a>  with autocomplete support, swipe gestures, multitouch and much more.
                 </p>
                 <ul>
                   <li>Price: Free </li>
@@ -1433,7 +1432,7 @@
                   Connects to an <a href="http://owncloud.org">ownCloud</a> instance.
                 </p>
                 <ul>
-                  <li>Price: 0.79 &euro;(Google Play), free(F-Droid) </li>
+                  <li>Price: 0.79 &euro; (Google Play), Free (F-Droid) </li>
                   <li>Min. Android version: 2.2</li>
                   <li><a href="https://github.com/owncloud/android">Source code</a></li>
                 </ul>
@@ -1515,7 +1514,7 @@
           <!-- Office:Proprietary -->
           <td class="proprietary">
             <ul class="proprietary">
-              <li><img src="img/proprietary/kingston.png" alt="Kingston" class="proprietary" /><br />Kingston Office</li>
+              <li><img src="img/proprietary/kingston.png" alt="Kingston" class="proprietary" /><br />WPS Office</li>
               <li><img src="img/proprietary/msofficemobile.png" alt="MS Office Mobile" class="proprietary" /><br />MS Office Mobile</li>
             </ul>
           </td>
@@ -1740,7 +1739,7 @@
             <div class="media-Text">
               <h2 class="eps">KeePassDroid</h2>
               <p>
-                KeePassDroid is a password manager that stores your passwords in an encrypted database which can be unlocked with a master password. Passwords can then easily be entered into webpages or applications by copying them to the clipboard. The desktop counterpart is <a href="http://keepass.info/" target="_blank">KeePass</a>.
+                KeePassDroid is a password manager that stores your passwords in an encrypted database which can be unlocked with a master passphrase. Passwords can then easily be entered into webpages or applications by copying them to the clipboard. The desktop counterpart is <a href="http://keepass.info/" target="_blank">KeePass</a>.
               </p>
               <ul>
                 <li>Price: Free</li>
@@ -1856,7 +1855,7 @@
 			<p>
               Do your web services support two factor authentication? Search <a href="https://twofactorauth.org/" target="_blank">here</a> for a green checkmark under the software implementation column. 
           </p>
-          <p>Create a strong master password using the <a href="http://diceware.com/" target="_blank">Diceware</a> method.
+          <p>Create a strong master passphrase using the <a href="http://diceware.com/" target="_blank">Diceware</a> method.
             </p>
           </td>
         </tr>
@@ -1906,6 +1905,7 @@
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=de.repat.mosf" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=de.repat.mosf" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="mosf" />
               </div>
             </div>          
