--- a/credits.html
+++ b/credits.html
@@ -38,7 +38,7 @@
         <td>Matthias for <a href="http://droid-break.info/#navigation">Navit</a></td>        
       </tr>
       <tr>
-        <td><a href="http://lutic.org/">LumenTeun</a> for <a href="http://droid-break.info/#audio">VLC</a>, <a href="http://droid-break.info/#notes">Tomdroid</a>, <a href="http://droid-break.info/#browser">Firefox(download fix)</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewrite of HTML/CSS</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/qrcodes">QR-codes</a> and countless pull requests!
+        <td><a href="http://lutic.org/">LumenTeun</a> for the <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewrite of HTML/CSS</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/qrcodes">QR-codes</a> and countless pull requests!
         </td>
       </tr>
        <tr>
@@ -49,6 +49,9 @@
       </tr>
       <tr>
         <td><a href="https://github.com/DorianScholz">DorianScholz</a> for CoolReader</td>        
+      </tr>
+      <tr>
+        <td>tedthqme, qopisbel, bzihufxq and RyDroid for countless pull requests, ideas, new apps and cleanups</td>
       </tr>
     </table>
     </div>
@@ -63,7 +66,7 @@
 		<a href="http://repat.de" target="_blank">
 		  repat
 		</a>
-		- Last update: 10. January 2015, 14:42
+		- Last update: 12. April 2015, 14:42
       </p>
     </footer>
   </body>
