--- a/index.html
+++ b/index.html
@@ -1539,8 +1539,8 @@
                 <li><a href="http://cgit.freedesktop.org/libreoffice/core/tree" target="_blank">Source code</a></li>
               </ul>
               <hr>
-              <a href="https://play.google.com/store/apps/details?id=com.collabora.libreoffice" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-              <a href="https://f-droid.org/repository/browse/?fdid=com.collabora.libreoffice" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <a href="https://play.google.com/store/apps/details?id=org.documentfoundation.libreoffice" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=org.documentfoundation.libreoffice" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
               <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="libreofficeviewer" />
             </div>
           </div>
