Added NoNonsense Notes in notes apps section.

--- a/index.html
+++ b/index.html
@@ -993,6 +993,30 @@
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="notecipher" />
               </div>
             </div>
+            
+            <!-- NoNonsense Notes -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/nononsensenotes.png" alt="nononsense notes" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">NoNonsense Notes</h2>
+                <p>
+                  Notepad and TODO app with sync support.
+                </p>
+                <ul>
+                  <li>Price: Free</li>
+                  <li>Min. Android version: 4.0</li>
+                  <li><a href="https://github.com/spacecowboy/NotePad">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=com.nononsenseapps.notepad" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=com.nononsenseapps.notepad" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid Repository" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="nononsensenotes" />
+              </div>
+            </div>
 
 
           </td>
