minor fixes/updates

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <div class="media-Text">
               <h2 class="eps">Twidere</h2>
               <p>
-                Twidere is a feature-rich, ad-free app with material design and a tablet mode.
+                Twidere is a feature-rich, ad-free Twitter client with material design and a tablet mode.
               </p>
               <ul>
                 <li>Price: Free</li>
@@ -941,7 +941,6 @@
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=org.tomdroid" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
                 <a href="https://f-droid.org/repository/browse/?fdid=org.tomdroid" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
-                <a href="https://launchpad.net/tomdroid/stable/0.7.5/+download/tomdroid-0.7.5.apk" target="_blank"><img src="apk.png" alt="APK download" class="download" /></a>
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="tomdroid" />
               </div>
             </div>
@@ -1023,7 +1022,6 @@
 
           <!-- Notes:Notes -->
           <td class="notes">
-            We are still missing some good alternatives here. Know any? Write an <a href="support.html">email or fork the project on GitHub</a> and add your favourite FOSS note app via pull-request. 
           </td>
         </tr>
       </table>
