--- a/index.html
+++ b/index.html
@@ -1838,7 +1838,7 @@
                 <ul>
                   <li>Price: Free </li>
                   <li>Min. Android version: 4.0</li>
-                  <li><a href="https://code.google.com/p/ics-openvpn/">Source code</a></li>
+                  <li><a href="https://github.com/schwabe/ics-openvpn/">Source code</a></li>
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=de.blinkt.openvpn" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
