--- a/index.html
+++ b/index.html
@@ -1343,11 +1343,11 @@
               <div class="media-Text">
                 <h2 class="eps">Transportr</h2>
                 <p>
-                  Transportr is an offline public transit router for select cities.
+                  Transportr is a public transit router for select cities and regions.
                 </p>
                 <ul>
                   <li>Price: Free</li>
-                  <li>Min. Android version: 3.0</li>
+                  <li>Min. Android version: 4.0</li>
                   <li><a href="https://github.com/grote/Transportr">Source code</a></li>
                 </ul>
                 <hr>
