Replace TextSecure and RedPhone with Signal
TextSecure was renamed Signal in November 2015,
and RedPhone was folded into Signal.

--- a/index.html
+++ b/index.html
@@ -463,27 +463,27 @@
 
             </div>
           </div>
-          
-          <!-- TextSecure -->
+
+          <!-- Signal -->
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="img/foss/textsecure.png" alt="textsecure" class="floss" />
+                <img src="img/foss/signal.png" alt="signal" class="floss" />
               </a>
             </div>
             <div class="media-Text">
-              <h2 class="eps">TextSecure</h2>
+              <h2 class="eps">Signal</h2>
               <p>
-                TextSecure is an end-to-end encrypted messenger. They run their own server and the cryptography is based on the proven <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> and done by <a href="https://whispersystems.org/">specialists</a>. Group chat is supported and you can send media files. The iOS version is called <a href="https://itunes.apple.com/app/signal-private-messenger/id874139669/" target="_blank">Signal</a>.
+                Signal is an end-to-end encrypted messenger. They run their own server and the cryptography is similar to the proven <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> and done by <a href="https://whispersystems.org/">specialists</a>. Group chat is supported and you can send media files. VoIP is also supported. There is also an <a href="https://itunes.apple.com/app/signal-private-messenger/id874139669/" target="_blank">iOS version</a>.
               </p>
               <ul>
                 <li>Price: Free</li>
                 <li>Min. Android version: 2.3</li>
-                <li><a href="https://github.com/WhisperSystems/TextSecure" target="_blank">Source code</a></li>
+                <li><a href="https://github.com/WhisperSystems/Signal-Android" target="_blank">Source code</a></li>
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=org.thoughtcrime.securesms" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="textsecure" />
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="signal" />
 
             </div>
           </div>
@@ -557,26 +557,26 @@
           <!-- VoIP:Free alternative -->
           <td>
 
-            <!-- RedPhone -->
+            <!-- Signal -->
             <div class="media emph-Block">
               <div class="media-Object">
                 <a href="#!" class="pic-Rounded">
-                  <img src="img/foss/redphone.png" alt="RedPhone" class="floss" />
+                  <img src="img/foss/signal.png" alt="signal" class="floss" />
                 </a>
               </div>
               <div class="media-Text">
-                <h2 class="eps">RedPhone</h2>
+                <h2 class="eps">Signal</h2>
                 <p>
-                  RedPhone uses end-to-end encryption and their own network. Very easy to use. Requires to sign up. The iOS version is called <a href="https://itunes.apple.com/app/signal-private-messenger/id874139669/">Signal</a>.
+                  Uses end-to-end encryption and their own network. Very easy to use. Requires to sign up. There is also an <a href="https://itunes.apple.com/app/signal-private-messenger/id874139669/"> iOS version</a>. It is formerly known as a separate application called RedPhone.
                 </p>
                 <ul>
                   <li>Price: Free</li>
-                  <li>Min. Android version: 2.2</li>
-                  <li><a href="https://github.com/whispersystems/redphone" target="_blank">Source code</a></li>
+                  <li>Min. Android version: 2.3</li>
+                  <li><a href="https://github.com/WhisperSystems/Signal-Android" target="_blank">Source code</a></li>
                 </ul>
                 <hr>
-                <a href="https://play.google.com/store/apps/details?id=org.thoughtcrime.redphone" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>	
-                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="redphone" />
+                <a href="https://play.google.com/store/apps/details?id=org.thoughtcrime.securesms" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>	
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="signal" />
 
               </div>
             </div>
@@ -635,7 +635,7 @@
 
           <!-- VoIP:Notes -->
           <td class="notes">
-            RedPhone uses special infrastructure, for all other apps you need a SIP account. Have a look on <a href="https://en.wikipedia.org/wiki/SIP_provider" target="_blank">Wikipedia</a> to find a SIP-provider. <a href="https://ostel.co/" target="_blank">Ostel</a> is a free and easy to use SIP service run by the <a href="https://guardianproject.info/" target="_blank">Guardian Project</a>.
+            Signal uses special infrastructure, for all other apps you need a SIP account. Have a look on <a href="https://en.wikipedia.org/wiki/SIP_provider" target="_blank">Wikipedia</a> to find a SIP-provider. <a href="https://ostel.co/" target="_blank">Ostel</a> is a free and easy to use SIP service run by the <a href="https://guardianproject.info/" target="_blank">Guardian Project</a>.
           </td>
         </tr>
       </table>
