Add Calendar section with three alternatives
Add three alternatives (with icons) to
Google Calendar and S Planner:
Etar, Offline Calendar and Standalone Calendar

Closes #40

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <li><a href="#voip">VoIP</a></li>
         <li><a href="#multimedia">Multimedia</a></li>
         <li><a href="#email">Email</a></li>
+        <li><a href="#calendar">Calendar</a></li>
         <li><a href="#notes">Notes</a></li>
         <li><a href="#newsreader">News Reader</a></li>
         <li><a href="#filemanager">File Manager</a></li>
@@ -876,6 +877,108 @@
         </tr>
       </table>
       <!-- End Email -->
+
+
+      <!-- Start Calendar -->
+      <h2><a id="calendar">Calendar</a><a href="#top" class="topLink">^</a></h2>
+      <table>
+        <tr>
+          <th>Proprietary</th>
+          <th>Free alternative</th>
+          <th>Notes</th>
+        </tr>
+
+        <tr>
+          <!-- Calendar:Proprietary -->
+          <td class="proprietary">
+            <ul class="proprietary">
+              <li><img src="img/proprietary/googlecalendar.png" alt="googlecalendar" class="proprietary" /><br />Google Calendar</li>
+              <li><img src="img/proprietary/splanner.png" alt="splanner" class="proprietary" /><br />S Planner / Calendar</li>
+            </ul>
+          </td>
+
+          <!-- Calendar:Free alternative -->
+          <td>
+            <!-- Etar -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/etar.png" alt="etar" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">Etar</h2>
+                <p>
+                  Etar is material designed calendar based on the ASOP calendar.
+                </p>
+                <ul>
+                  <li>Price: Free</li>
+                  <li>Min. Android version: 4.4</li>
+                  <li><a href="https://github.com/xsoh/Etar-Calendar/">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=ws.xsoh.etar" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=ws.xsoh.etar" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="etar" />
+              </div>
+            </div>
+
+            <!-- Offline Calendar -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/offlinecalendar.png" alt="offlinecalendar" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">Offline Calendar</h2>
+                <p>
+                  Lets you add offline calendars to the Calendar app, which are not synchronized and are accessible only on the device itself. Create the calendar in this app and it will then be available in the Calendar app.
+                </p>
+                <ul>
+                  <li>Price: Free</li>
+                  <li>Min. Android version: 2.2</li>
+                  <li><a href="https://github.com/SufficientlySecure/offline-calendar/">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=org.sufficientlysecure.localcalendar" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=org.sufficientlysecure.localcalendar" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="offlinecalendar" />
+              </div>
+            </div>
+
+            <!-- Standalone Calendar -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/standalonecalendar.png" alt="standalonecalendar" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">Standalone Calendar</h2>
+                <p>
+                  Fork of the original calendar from AOSP (Android Open Source Project), built from the Android 4.3 source tree. Not updated since 2013.
+                </p>
+                <ul>
+                  <li>Price: Free</li>
+                  <li>Min. Android version: 4.0.3</li>
+                  <li><a href="https://github.com/free-software-for-android/Standalone-Calendar">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=org.sufficientlysecure.standalonecalendar" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=org.sufficientlysecure.standalonecalendar" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="standalonecalendar" />
+              </div>
+            </div>
+
+          </td>
+
+          <!-- Calendar:Notes -->
+          <td class="notes">
+          </td>
+        </tr>
+      </table>
+      <!-- End Calendar -->
 
       <!-- Start Notes -->
       <h2><a id="notes">Notes</a><a href="#top" class="topLink">^</a></h2>
