updated source + price in euros
https://twitter.com/davdroidapp/status/711139916751757312

--- a/index.html
+++ b/index.html
@@ -1613,9 +1613,9 @@
                 Synchronization solution for both contacts (CardDAV) and calendars (CalDAV). Requires a hosting server.
               </p>
               <ul>
-                <li>Price: $3.69 (Google Play), Free (F-Droid)</li>
+                <li>Price: 3.33&euro; (Google Play), Free (F-Droid)</li>
                 <li>Min. Android version: 4.0</li>
-                <li><a href="https://github.com/bitfireAT/davdroid" target="_blank">Source code</a></li>
+                <li><a href="http://davdroid.bitfire.at/source/" target="_blank">Source code</a></li>
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=at.bitfire.davdroid" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
