Added surespot and removed maps.me (F-Droid)
surespot has been in the F-Droid repo for almost two months now and has received and is keeping up with updates. The maps.me fork no longer exists or is hosted on F-Droid, so the link was removed.

--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=com.twofours.surespot" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=com.twofours.surespot" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
               <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="surespot" />
 
             </div>
@@ -1428,7 +1429,6 @@
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=com.mapswithme.maps.pro" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-                <a href="https://f-droid.org/repository/browse/?fdid=com.mapswithme.maps.libre" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
                 <a href="https://maps.me/apk/" target="_blank"><img src="img/foss/apk.png" alt="APK" class="download" /></a> 
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="mapsme" />
 
